--- a/index.qmd
+++ b/index.qmd
@@ -29,27 +29,40 @@ High demand and high value products are often targets for adulteration and fraud
 
 ### Data Collection
 
-Before we dive into the analysis of the stingless bee honey, we first need to get the data. Pure stingless bee honey samples are collected from three towns in the northern part of Malaysia: Merbok, Kodiang, and Teloi Tua. A total of 250 samples is used in this analysis. They include:
+Before diving into the analysis of the stingless bee honey, we first need to collect the data. Pure stingless bee honey samples were collected from three towns in the northern part of Malaysia: Merbok, Kodiang, and Teloi Tua. A total of 250 samples are used in this analysis. They include:
 
--   **Three pure samples**: the pure stingless bee honey from the three towns in the northern part of Malaysia
+-   **Three pure samples**: Pure stingless bee honey from the three towns in the northern part of Malaysia
 
--   **Two pure adulteration samples**: water and apple cider vinegar
+-   **Two pure adulteration samples**: Samples of water and apple cider vinegar
 
--   **120 samples with vary adulteration**: add 1 milliliter of water in each pure stingless bee honey, add 2 milliliters of water in each pure stingless bee honey, add 3 milliliters of water in each pure stingless bee honey, … , add 20 milliliters of water in each pure stingless bee honey
+-   **120 samples with vary adulteration**: They were created by adding increasing amount of water to each pure honey sample. For instance,  1 milliliter of water added in each pure stingless bee honey, … up to 20 milliliters of water added in each pure stingless bee honey
 
-Once sample data is collected, they are systematically labeled by the source and levels of adulterant that were added. For the substances to be processed properly in the honey, the altered samples are stirred and stored in the dark for 24 hours before beginning the analysis to ensure stable readings. Another thing we need to know is the measurements that will be used in the analysis. There are two measurements that will be used and they are: Brix and Acidity. Brix measures the level of sugar and concentration in a liquid. You can think of it as sweetness. Higher brix means more sugar which indicates the liquid is sweeter. Alternatively, lower brix means less sugar which indicates the liquid is less sweet. Acidity is measured using a standard pH meter. You can think of it as sourness. High acidity indicates very sour while low acidity indicates dullness.
+Once sample data is collected, they are systematically labeled by the source and levels of adulterant added. To ensure the substances were processed properly in the honey, the altered samples are stirred and stored in the dark for 24 hours before beginning the analysis to ensure stable readings.
 
-The current samples are not ready to be analyzed; raw data and clean data are needed. First, to transform the existing samples into raw data, a simple light “scanner” (scientifically known as Near-Infrared Spectroscopy) is used. This is a scanner that shines a spectrum of light that human eyes cannot see through the stingless bee honey samples and observes how each molecules reacts. Each molecule interacts differently with the light; some might absorb more than others. The scanner measures how much colours each molecule absorbs. The thousand produced measurements become the raw data called ‘light fingerprint’. Secondly, Principal Component Analysis (PCA) is used to convert thousands of raw data smaller set of data by grouping similar data together, keeping the biggest differences, and removing data that is irrelevant. Essentially, PCA does the analysis to clean up the messy data and return a smaller, cleaner dataset that only contains the most important part so it’s easier to understand. Now the data is cleaned and ready for analysis.
+### Measurements
+
+This analysis will be focusing on two measurements: Brix and Acidity.
+
+-    Brix measures the level of sugar and concentration in a liquid. Think of it as sweetness. Higher brix means more sugar which indicates the liquid is sweeter. Alternatively, lower brix means less sugar which indicates the liquid is less sweet.
+
+-    Acidity measures using a standard pH meter. Think of it as sourness. High acidity indicates very sour while low acidity indicates dullness.
+
+### Data Cleaning
+
+The current samples are not ready to be analyzed; raw data and clean data are needed. First, to transform the existing samples into raw data, a simple light “scanner” (scientifically known as Near-Infrared Spectroscopy) is used. This is a scanner that shines a spectrum of light that human eyes cannot see through the stingless bee honey samples and observes how each molecules reacts. Each molecule interacts differently with the light; some might absorb more than others. The scanner measures how much colours each molecule absorbs. The scanner produced thousands of data; known as the ‘light fingerprint’.
+
+Secondly, Principal Component Analysis (PCA) is used to convert thousands of raw data into smaller set of data by grouping similar data together, keeping the biggest differences, and removing data that is irrelevant. Essentially, PCA performs the analysis to clean up the messy data and return a smaller, cleaner dataset that only contains the most important part so it’s easier to understand.
 
 ### The Analysis
 
-In order to analyze and interpret the data properly, a set of machine learning algorithm is needed that learns and explain the hidden patterns. Two main models are used: combination of Principal Component Analysis (PCA) and linear discriminant analysis (LDA) to build a classifier (PCA-LDA) and a partial least squares regression (PLSR) as the quantifier.
+To properly analyze and interpret the data, a set of machine learning algorithm is needed to learn and explain the hidden patterns. Two main models were used: combination of Principal Component Analysis (PCA) and linear discriminant analysis (LDA) to build a classifier (PCA-LDA) and a partial least squares regression (PLSR) as the quantifier.
 
-The linear discriminant analysis is a supervised machine learning technique for dimensionality reduction and classification. Imagine you have a pile of socks in a big box. The technique essentially groups similar socks together and set the different socks far apart. This technique is combined with PCA. This model learns hidden patterns and classified the boundaries between groups with labels (pure honey, water-adulterated vs vinegar-adulterated).
+Linear discriminant analysis (LDA) is a supervised machine learning technique for dimensionality reduction and classification. Imagine you have a pile of socks in a big box. The technique essentially groups similar socks together and set the different socks far apart. This technique is combined with PCA. It learned hidden patterns and classified the boundaries between groups with the labels (pure honey, water-adulterated vs vinegar-adulterated).
 
-To take it one step further, the researchers use partial least squares regression (PLSR) model to identify the amount of adulterant was added into the honey. Partial least squares regression is a model that make prediction from many related measurements. For instance, you are trying to drive from point A to point B using GPS. There are many different routes you can take but GPS takes in all possible routes and gives you the most optimal one. This model takes in the raw data and learns hidden patterns then makes prediction of how much adulterant was added into the honey. Researchers found that using a model with 7 components achieves a very strong correlation between predicted and actual adulteration level. This means that the predicted percentages of the adulterants matched the actual values almost perfectly.
+To take the analysis one step further, the researchers use partial least squares regression (PLSR) model to identify the exact amount of adulterant added into the honey. PLSR is a model that make predictions from many related measurements. For instance, you are trying to drive from point A to point B using GPS. There are many different routes you can take but GPS takes in all possible routes and gives you the most optimal one. This model took in the raw data and learned hidden patterns then predicted how much adulterant added into the honey. Researchers found that using a model with 7 components achieved a very strong correlation between predicted and actual adulteration level. This means the predicted percentages of the adulterants matched the actual values almost perfectly.
 
 ### Results & Takeaway
 
-The PCA-LDA model achieved 100 % accuracy on distinguishing pure and adulterated stingless bee honey. The PLSR model is able to accurately quantify the percentage of adulteration with high correlation coefficients (\~0.993) and low errors (RMSECV = 1.686%). This indicates the model’s reliability. The goal of this research is to demonstrate data science tools can detect and measure fake honey. This research provides the truth when our senses are unreliable. The model performed with high accuracy with stingless bee honey; imagine the other products we can apply this method to. With this truth, it allows customers to purchase premium stingless bee honey with confidence and protect the beekeepers by showing the authenticity if their honey. The next time you choose a premium product, know that science is working to ensure its label tells the truth.
+The PCA-LDA model achieved 100 % accuracy on distinguishing pure and adulterated stingless bee honey. The PLSR model is able to accurately quantify the percentage of adulteration with high correlation coefficients (\~0.993) and low errors (RMSECV = 1.686%). This indicates the model’s reliability.
 
+The goal of this research is to demonstrate how data science tools can detect and measure fake honey. This research provides the truth when our senses are unreliable. The model performed with high accuracy with stingless bee honey; imagine how many other products these models can apply to. With this truth, it allows customers to purchase premium stingless bee honey with confidence and protect the beekeepers by showing the authenticity of their honey. The next time you choose a premium product, know that science is working to ensure its label tells the truth.
